--- a/verval2.html
+++ b/verval2.html
@@ -197,6 +197,10 @@
 
 <div id="csvTable">De tabel wordt geladen...</div>
 
+<div style="text-align: center;">
+    <button onclick="window.location.href='print_overzicht.html'">Print overzicht</button>
+</div>
+
 <hr>
 
 <button class="info-btn" onclick="openModal('myModal')">i</button>
