--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -310,6 +310,10 @@
         </div> <button type="button" class="submit-btn" onclick="berekenEnPlot()">Bekijk opnames</button>
     </form>
 
+    <ul class="link-list">
+        <li><a href="opnames.html" class="link2"><i class="fa-solid fa-circle-radiation"></i>Visualisatie<i class="fa-solid fa-circle-radiation"></i></a></li>
+    </ul>
+
     <p id="output" style="color: #F5DF4D; text-align: center; font-weight: bold;"></p>
 
     <!-- Nieuw Resultaten Blok -->
