--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             let allItems = localItems.map(li => ({ element: li, text: li.textContent.toLowerCase() }));
 
             // Fetch items from other pages
-            const pages = ['handigelinks.html', 'onstream.html'];
+            const pages = ['handigelinks.html', 'onstream.html', 'opnamesklasseb.html'];
             let remoteItems = [];
 
             for (const page of pages) {
