--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
     </div>
 
     <ul class="link-list">
-        <li><a href="focusverandering.html" class="link1"><i class="fa-solid fa-up-down"></i>Focusverandering<i class="fa-solid fa-up-down"></i></a></li>
-        <li><a href="filmsoortverandering.html" class="link2"><i class="fa-solid fa-repeat"></i>D4 D5 D7<i class="fa-solid fa-repeat"></i></a></li>
+        <li><a href="focusverandering.html" class="link1"><i class="fa-solid fa-up-down"></i>FFD & Filmtype<i class="fa-solid fa-up-down"></i></a></li>
         <li><a href="verval2.html" class="link3"><i class="fa-solid fa-radiation"></i>Bronsterkte<i class="fa-solid fa-radiation"></i></a></li>
         <li><a href="pruts.html" class="link4"><i class="fa-solid fa-robot"></i>P.R.U.T.S<i class="fa-solid fa-robot"></i></a></li>
         <li><a href="schuifje.html" class= "link1"><i class="fa-solid fa-ruler-horizontal"></i>Schuifje<i class="fa-solid fa-ruler-horizontal"></i></a></li>
