--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         <li><a href="focusverandering.html" class="link1"><i class="fa-solid fa-up-down"></i>FFD & Filmtype<i class="fa-solid fa-up-down"></i></a></li>
         <li><a href="verval2.html" class="link3"><i class="fa-solid fa-radiation"></i>Bronsterkte<i class="fa-solid fa-radiation"></i></a></li>
         <li><a href="pruts.html" class="link4"><i class="fa-solid fa-robot"></i>P.R.U.T.S<i class="fa-solid fa-robot"></i></a></li>
+        <li><a href="stralingstijd.html" class="link2"><i class="fa-solid fa-hourglass"></i>Gamma stralingstijd<i class="fa-solid fa-hourglass"></i></a></li>
         <li><a href="schuifje.html" class= "link1"><i class="fa-solid fa-ruler-horizontal"></i>Schuifje<i class="fa-solid fa-ruler-horizontal"></i></a></li>
         <li><a href="opnamesklasseb.html" class="link4"><i class="fa-solid fa-star-of-life"></i>Aantal opnames<i class="fa-solid fa-star-of-life"></i></a></li>
         <li><a href="cw2.html" class= "link2"><i class="fa-solid fa-circle-radiation"></i>Rondnaad tool<i class="fa-solid fa-circle-radiation"></i></a></li>
