--- a/verval2.html
+++ b/verval2.html
@@ -216,6 +216,7 @@
 
 <ul class="link-list">
     <li><a href="schuifje.html" class="link1"><i class="fa-solid fa-ruler-horizontal"></i>Schuifje<i class="fa-solid fa-ruler-horizontal"></i></a></li>
+    <li><a href="stralingstijd.html" class="link2"><i class="fa-solid fa-hourglass"></i>Gamma Stralingstijd<i class="fa-solid fa-hourglass"></i></a></li>
 </ul>
 
 <h2>Handmatige Activiteitsberekening</h2>
