--- a/verval2.html
+++ b/verval2.html
@@ -1,244 +1,294 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="nl">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Activiteitsberekening</title>
     <style>
-        body {
-            font-family: 'Roboto Condensed', sans-serif;
-            padding: 50px;
-            margin: 0;
-            min-height: 190vh;
-        }
+      body {
+        font-family: "Roboto Condensed", sans-serif;
+        padding: 50px;
+        margin: 0;
+        min-height: 190vh;
+      }
 
-        table {
-            background-color: #293133;
-            border-collapse: collapse;
-            margin: 0 auto;
-        }
+      table {
+        background-color: #293133;
+        border-collapse: collapse;
+        margin: 0 auto;
+      }
 
-        table th, table td {
-            padding: 8px;
-            border: 1px solid black;
-        }
+      table th,
+      table td {
+        padding: 8px;
+        border: 1px solid black;
+      }
 
-        .link-list {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
+      .link-list {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
 
-        .link-list li {
-            margin: 5px;
-        }
+      .link-list li {
+        margin: 5px;
+      }
 
-        .link-list a {
-            text-decoration: none;
-            color: #000000;
-            padding: 10px 30px;
-            border-radius: 15px;
-            font-size: 0.9rem;
-            font-weight: bold;
-            transition: transform 0.3s;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            width: 200px;
-            height: 50px;
-            background-color: transparent;
-            gap: 10px;
-        }
+      .link-list a {
+        text-decoration: none;
+        color: #000000;
+        padding: 10px 30px;
+        border-radius: 15px;
+        font-size: 0.9rem;
+        font-weight: bold;
+        transition: transform 0.3s;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 200px;
+        height: 50px;
+        background-color: transparent;
+        gap: 10px;
+      }
 
-        .link-list a:hover {
-            transform: scale(1.05);
-            background-color: transparent;
-        }
+      .link-list a:hover {
+        transform: scale(1.05);
+        background-color: transparent;
+      }
 
-        .link1 {
-            background-image: url('tape1.PNG');
-        }
+      .link1 {
+        background-image: url("tape1.PNG");
+      }
 
-        button {
-            background-color: #F5DF4D;
-            font-size: 20px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
+      button {
+        background-color: #f5df4d;
+        font-size: 20px;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 20px;
+      }
 
-        button:hover {
-            background-color: #e0c944;
-        }
+      button:hover {
+        background-color: #e0c944;
+      }
 
-        #csvTable {
-            align-items: center;
-        }
+      #csvTable {
+        align-items: center;
+      }
     </style>
     <script>
-        function formatDate(date) {
-            const day = String(date.getDate()).padStart(2, '0');
-            const month = String(date.getMonth() + 1).padStart(2, '0');
-            const year = date.getFullYear();
-            return `${day}-${month}-${year}`;
+      function formatDate(date) {
+        const day = String(date.getDate()).padStart(2, "0");
+        const month = String(date.getMonth() + 1).padStart(2, "0");
+        const year = date.getFullYear();
+        return `${day}-${month}-${year}`;
+      }
+
+      function calculateActivity() {
+        const ci1 = parseFloat(document.getElementById("ci1").value);
+        const type = document.getElementById("isotope").value;
+        const firstDate = document.getElementById("firstDate").value;
+        const secondDate =
+          document.getElementById("secondDate").value || formatDate(new Date());
+
+        if (isNaN(ci1) || !firstDate) {
+          alert("Vul a.u.b. alle velden correct in.");
+          return;
         }
 
-        function calculateActivity() {
-            const ci1 = parseFloat(document.getElementById("ci1").value);
-            const type = document.getElementById("isotope").value;
-            const firstDate = document.getElementById("firstDate").value;
-            const secondDate = document.getElementById("secondDate").value || formatDate(new Date());
+        const firstDateObj = new Date(firstDate.split("-").reverse().join("-"));
+        const secondDateObj = new Date(
+          secondDate.split("-").reverse().join("-"),
+        );
+        const timeDifference = secondDateObj - firstDateObj;
+        const days = timeDifference / (1000 * 3600 * 24);
+        let ci2 = 0;
 
-            if (isNaN(ci1) || !firstDate) {
-                alert("Vul a.u.b. alle velden correct in.");
-                return;
-            }
-
-            const firstDateObj = new Date(firstDate.split('-').reverse().join('-'));
-            const secondDateObj = new Date(secondDate.split('-').reverse().join('-'));
-            const timeDifference = secondDateObj - firstDateObj;
-            const days = timeDifference / (1000 * 3600 * 24);
-            let ci2 = 0;
-
-            if (type === "Se75") {
-                ci2 = ci1 / Math.pow(2, days / 120);
-            } else if (type === "Ir192") {
-                ci2 = ci1 / Math.pow(2, days / 74);
-            }
-
-            document.getElementById("result").innerHTML = `De activiteit is nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Ci</span> op <span style="color:#F5DF4D">${formatDate(secondDateObj)}</span>.`;
+        if (type === "Se75") {
+          ci2 = ci1 / Math.pow(2, days / 120);
+        } else if (type === "Ir192") {
+          ci2 = ci1 / Math.pow(2, days / 74);
         }
 
-        function loadCSV(file) {
-            fetch(file)
-                .then(response => response.text())
-                .then(data => {
-                    const rows = data.split("\n");
-                    let table = '<table border="1"><tr>';
-                    table += `<th>Bron</th><th>Type</th><th>Huidige Activiteit</th><th>Brongrootte</th>`;
-                    table += '</tr>';
+        document.getElementById("result").innerHTML =
+          `De activiteit is nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Ci</span> op <span style="color:#F5DF4D">${formatDate(secondDateObj)}</span>.`;
+      }
 
-                    rows.forEach((row, index) => {
-                        if (row.trim() !== "") {
-                            const cols = row.split(",");
-                            if (cols.length >= 5) {
-                                const bron = cols[0];
-                                const type = cols[1];
-                                const activiteit = parseFloat(cols[2]);
-                                const datum = cols[3];
-                                const brongrootte = cols[4];
+      function loadCSV(file) {
+        fetch(file)
+          .then((response) => response.text())
+          .then((data) => {
+            const rows = data.split("\n");
+            let table = '<table border="1"><tr>';
+            table += `<th>Bron</th><th>Type</th><th>Huidige Activiteit</th><th>Brongrootte</th>`;
+            table += "</tr>";
 
-                                if (bron && type && !isNaN(activiteit) && datum && brongrootte) {
-                                    const secondDate = new Date();
-                                    const currentActivity = calculateActivityForCSV(activiteit, type, datum, secondDate).toFixed(2);
-                                    const today = formatDate(secondDate);
+            rows.forEach((row, index) => {
+              if (row.trim() !== "") {
+                const cols = row.split(",");
+                if (cols.length >= 5) {
+                  const bron = cols[0];
+                  const type = cols[1];
+                  const activiteit = parseFloat(cols[2]);
+                  const datum = cols[3];
+                  const brongrootte = cols[4];
 
-                                    table += `<tr onclick="fillFormAndCalculate('${bron}', '${type}', '${activiteit}', '${datum}')">`;
-                                    table += `<td>${bron}</td>`;
-                                    table += `<td>${type}</td>`;
-                                    table += `<td><span style="color:#F5DF4D">${currentActivity} Ci</span></td>`;
-                                    table += `<td>${brongrootte}</td>`;
-                                    table += '</tr>';
-                                }
-                            }
-                        }
-                    });
-                    table += '</table>';
-                    document.getElementById("csvTable").innerHTML = table;
-                })
-                .catch(error => console.error("Error loading CSV:", error));
+                  if (
+                    bron &&
+                    type &&
+                    !isNaN(activiteit) &&
+                    datum &&
+                    brongrootte
+                  ) {
+                    const secondDate = new Date();
+                    const currentActivity = calculateActivityForCSV(
+                      activiteit,
+                      type,
+                      datum,
+                      secondDate,
+                    ).toFixed(2);
+                    const today = formatDate(secondDate);
+
+                    table += `<tr onclick="fillFormAndCalculate('${bron}', '${type}', '${activiteit}', '${datum}')">`;
+                    table += `<td>${bron}</td>`;
+                    table += `<td>${type}</td>`;
+                    table += `<td><span style="color:#F5DF4D">${currentActivity} Ci</span></td>`;
+                    table += `<td>${brongrootte}</td>`;
+                    table += "</tr>";
+                  }
+                }
+              }
+            });
+            table += "</table>";
+            document.getElementById("csvTable").innerHTML = table;
+          })
+          .catch((error) => console.error("Error loading CSV:", error));
+      }
+
+      function calculateActivityForCSV(ci1, type, firstDate, secondDate) {
+        const firstDateObj = new Date(firstDate.split("-").reverse().join("-"));
+        const timeDifference = secondDate - firstDateObj;
+        const days = timeDifference / (1000 * 3600 * 24);
+        let ci2 = 0;
+
+        if (type === "Se75") {
+          ci2 = ci1 / Math.pow(2, days / 120);
+        } else if (type === "Ir192") {
+          ci2 = ci1 / Math.pow(2, days / 74);
         }
 
-        function calculateActivityForCSV(ci1, type, firstDate, secondDate) {
-            const firstDateObj = new Date(firstDate.split('-').reverse().join('-'));
-            const timeDifference = secondDate - firstDateObj;
-            const days = timeDifference / (1000 * 3600 * 24);
-            let ci2 = 0;
+        return ci2;
+      }
 
-            if (type === "Se75") {
-                ci2 = ci1 / Math.pow(2, days / 120);
-            } else if (type === "Ir192") {
-                ci2 = ci1 / Math.pow(2, days / 74);
-            }
+      function fillFormAndCalculate(bron, type, activiteit, datum) {
+        document.getElementById("isotope").value = type;
+        document.getElementById("ci1").value = activiteit;
+        document.getElementById("firstDate").value = datum
+          .split("-")
+          .reverse()
+          .join("-");
+        document.getElementById("secondDate").value = "";
 
-            return ci2;
-        }
+        const secondDate = new Date();
+        const ci2 = calculateActivityForCSV(
+          activiteit,
+          type,
+          datum,
+          secondDate,
+        );
 
-        function fillFormAndCalculate(bron, type, activiteit, datum) {
-            document.getElementById("isotope").value = type;
-            document.getElementById("ci1").value = activiteit;
-            document.getElementById("firstDate").value = datum.split('-').reverse().join('-');
-            document.getElementById("secondDate").value = "";
+        document.getElementById("result").innerHTML =
+          `Bron <span style="color:#F5DF4D">${bron}</span> heeft nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Ci</span> op <span style="color:#F5DF4D">${formatDate(secondDate)}</span>.`;
+      }
 
-            const secondDate = new Date();
-            const ci2 = calculateActivityForCSV(activiteit, type, datum, secondDate);
-
-            document.getElementById("result").innerHTML = `Bron <span style="color:#F5DF4D">${bron}</span> heeft nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Ci</span> op <span style="color:#F5DF4D">${formatDate(secondDate)}</span>.`;
-        }
-
-        window.onload = function () {
-            loadCSV('bronnen.csv');
-        };
+      window.onload = function () {
+        loadCSV("bronnen.csv");
+      };
     </script>
-</head>
-<body>
+  </head>
+  <body>
+    <h1 style="color: #f5df4d; text-align: center">Bronnen Tabel</h1>
 
-<h1 style="color: #F5DF4D; text-align: center;">Bronnen Tabel</h1>
+    <div id="csvTable">De tabel wordt geladen...</div>
 
-<div id="csvTable">De tabel wordt geladen...</div>
-
-<div style="text-align: center;">
-    <button onclick="window.location.href='print_overzicht.html'">Print overzicht</button>
-</div>
-
-<hr>
-
-<button class="info-btn" onclick="openModal('myModal')">i</button>
-
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal('myModal')">&times;</span>
-        <p>In de tabel staat de activiteit van elke bron op dit moment. Onder de tabel kun je zelf een bereking maken voor een andere datum of andere bron.</p>
+    <div style="text-align: center">
+      <button onclick="window.location.href = 'print_overzicht.html'">
+        Print overzicht
+      </button>
     </div>
-</div>
 
-<script src="script.js"></script>
+    <hr />
 
-<ul class="link-list">
-    <li><a href="schuifje.html" class="link1"><i class="fa-solid fa-ruler-horizontal"></i>Schuifje<i class="fa-solid fa-ruler-horizontal"></i></a></li>
-    <li><a href="stralingstijd.html" class="link2"><i class="fa-solid fa-hourglass"></i>Gamma Stralingstijd<i class="fa-solid fa-hourglass"></i></a></li>
-</ul>
+    <button class="info-btn" onclick="openModal('myModal')">i</button>
 
-<h2>Handmatige Activiteitsberekening</h2>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal('myModal')">&times;</span>
+        <p>
+          In de tabel staat de activiteit van elke bron op dit moment. Onder de
+          tabel kun je zelf een bereking maken voor een andere datum of andere
+          bron.
+        </p>
+      </div>
+    </div>
 
-<label for="isotope">Kies een isotoop:</label>
-<select id="isotope">
-    <option value="Se75">Se75</option>
-    <option value="Ir192">Ir192</option>
-</select><br><br>
+    <script src="script.js"></script>
 
-<label for="ci1">Activiteit (Ci) op eerste datum:</label>
-<input type="number" id="ci1" required><br><br>
+    <ul class="link-list">
+      <li>
+        <a href="schuifje.html" class="link1"
+          ><i class="fa-solid fa-ruler-horizontal"></i>Schuifje<i
+            class="fa-solid fa-ruler-horizontal"
+          ></i
+        ></a>
+      </li>
+      <li>
+        <a href="stralingstijd.html" class="link2"
+          ><i class="fa-solid fa-hourglass"></i>Gamma Stralingstijd<i
+            class="fa-solid fa-hourglass"
+          ></i
+        ></a>
+      </li>
+    </ul>
 
-<label for="firstDate">Eerste datum (DD-MM-YYYY):</label>
-<input type="text" id="firstDate" placeholder="DD-MM-YYYY" required><br><br>
+    <h2>Handmatige Activiteitsberekening</h2>
 
-<label for="secondDate">Tweede datum (DD-MM-YYYY):</label>
-<input type="text" id="secondDate" placeholder="DD-MM-YYYY"><br><br>
+    <label for="isotope">Kies een isotoop:</label>
+    <select id="isotope">
+      <option value="Se75">Se75</option>
+      <option value="Ir192">Ir192</option></select
+    ><br /><br />
 
-<button onclick="calculateActivity()">Bereken activiteit</button>
+    <label for="ci1">Activiteit (Ci) op eerste datum:</label>
+    <input type="number" id="ci1" required /><br /><br />
 
-<h2 id="result"></h2>
-<div style="height: 200px;"></div>
-</body>
+    <label for="firstDate">Eerste datum (DD-MM-YYYY):</label>
+    <input
+      type="text"
+      id="firstDate"
+      placeholder="DD-MM-YYYY"
+      required
+    /><br /><br />
+
+    <label for="secondDate">Tweede datum (DD-MM-YYYY):</label>
+    <input type="text" id="secondDate" placeholder="DD-MM-YYYY" /><br /><br />
+
+    <button onclick="calculateActivity()">Bereken activiteit</button>
+
+    <h2 id="result"></h2>
+    <div style="height: 200px"></div>
+  </body>
 </html>
