--- a/verval2.html
+++ b/verval2.html
@@ -70,6 +70,11 @@
       .link1 {
         background-image: url("tape1.PNG");
       }
+  
+      .link2 {
+	background-image: url("tape2.PNG");
+      }
+  
 
       button {
         background-color: #f5df4d;
