--- a/focusverandering.html
+++ b/focusverandering.html
@@ -631,12 +631,12 @@
                 <div class="form-group">
                     <div class="input-row">
                         <div class="input-wrapper small-input">
-                            <label for="oude_focus">Oude Focus (FFD)</label>
+                            <label for="oude_focus">Oude FFD</label>
                             <!-- Oude focus nu standaard op 80 -->
                             <input type="number" id="oude_focus" step="any" placeholder="Bijv. 80" value="80">
                         </div>
                         <div class="input-wrapper small-input">
-                            <label for="nieuwe_focus">Nieuwe Focus (FFD)</label>
+                            <label for="nieuwe_focus">Nieuwe FFD</label>
                             <input type="number" id="nieuwe_focus" step="any" placeholder="Bijv. 100">
                         </div>
                     </div>
