--- a/focusverandering.html
+++ b/focusverandering.html
@@ -586,13 +586,15 @@
                     <label style="color: var(--accent-color); margin-bottom: 10px;">1. Oude Situatie</label>
                     <div class="input-row">
                         <div class="input-wrapper small-input">
-                            <label>Oude Tijd (Min)</label>
+                            <label>Minuten</label>
                             <input type="number" id="ci_old_min" placeholder="0" inputmode="numeric">
                         </div>
                         <div class="input-wrapper small-input">
-                            <label>(Sec)</label>
+                            <label>Seconden</label>
                             <input type="number" id="ci_old_sec" placeholder="0" inputmode="numeric">
                         </div>
+                    </div>
+                    <div class="input-row" style="margin-top: 15px;">
                         <div class="input-wrapper">
                             <label>Oude Ci</label>
                             <input type="number" id="ci_old_val" placeholder="Bijv. 50" step="any" inputmode="decimal">
